<resources>
    <string name="app_name">Java Calculus</string>
    <string name="action_about">About</string>
    <string name="action_help">Help</string>
    <string name="action_script">Script Mode</string>
    <string name="text_about">CalculusCal solves basic mathematics operations in addition to varying degrees of
        Calculus problems. CalculusCal uses a custom built parser to resolve all problems.
        \n\nThis project was completed as a fulfilment of course COMP3901 at the University of West Indies, Mona.
    </string>
    <string name="text_group">Members of Group_25\n\u2022 Michael Huie\n\u2022 Andre Boothe\n\u2022 Orren Joseph</string>
    <string name="text_help">\u2022<b> XY key </b>is used to generate graph from the equation supplied.
        \n\n\u2022<b> SP Key</b> is used to escape format for function such as log and ^ keys.
        \n\n\u2022<b> GO Key</b> evaluates the information you supply.
        \n\n\u2022<b> C key</b> backspace single character from input while a long press clears all data.
        \n\nNote: When the ^ key is pressed nothing appears on screen until power value entered.
    </string>
    <string name="website">source code at: <a href="http://github.com/mihuie">CalculusCal</a> </string>
    <string name="text_0">0</string>
    <string name="addDigit">%d</string>
    <string name="btn_plus">+</string>
    <string name="btn_equals">=</string>
    <string name="btn_decimal">.</string>
    <string name="btn_0">0</string>
    <string name="btn_minus">-</string>
    <string name="btn_3">3</string>
    <string name="btn_2">2</string>
    <string name="btn_1">1</string>
    <string name="btn_multiply">*</string>
    <string name="btn_6">6</string>
    <string name="btn_5">5</string>
    <string name="btn_4">4</string>
    <string name="btn_divide">&#247;</string>
    <string name="btn_9">9</string>
    <string name="btn_8">8</string>
    <string name="btn_7">7</string>
    <string name="btn_reset">AC</string>
    <string name="btn_clear">C</string>
    <string name="btn_root">&#8730;</string>
    <string name="btn_power">^</string>
    <string name="btn_negative">( - )</string>
    <string name="btn_fractions">b/c</string>
    <string name="btn_leftBracket">(</string>
    <string name="btn_rightBracket">)</string>
    <string name="btn_f">f</string>
    <string name="btn_g">g</string>
    <string name="btn_x">x</string>
    <string name="btn_y">:</string>
    <string name="btn_pi">&#960;</string>
    <string name="btn_storeFunction">Func</string>
    <string name="btn_log">log</string>
    <string name="btn_sin">sin</string>
    <string name="btn_cos">cos</string>
    <string name="btn_tan">tan</string>
    <string name="btn_ln">ln</string>
    <string name="btn_limit">lim</string>
    <string name="btn_diff">&#8706;y/&#8706;x</string>
    <string name="btn_integral">&#8747;</string>
    <string name="btn_towards">&#8594;</string>
    <string name="btn_plusmn">&#177;</string>
    <string name="btn_infinity">&#8734;</string>
    <string name="btn_exponent">&#8706;x</string>
    <string name="btn_space">SP</string>
    <string name="btn_evaluate">GO</string>
    <string name="action_graph">Graph</string>
    <string name="btn_plot">XY</string>
    <string name="script_action">Script Mode</string>
    <string name="btn_fact">!</string>
    <string name="btn_fRoot">rts</string>
    <string name="btn_cont">ctnty</string>
</resources>
