<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/content_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        tools:ignore="NestedWeights"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_main"
        tools:context="com.uwimona.group25.calculuscal.MainActivity">

    <WebView
            android:id="@+id/webViewResult"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.8" />

    <WebView
            android:id="@+id/webView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.8" />


    <LinearLayout
            android:id="@+id/linLayout_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="horizontal">

        <Button
                android:id="@+id/btn_ln"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_ln"
                android:textAllCaps="false"
                style="?android:attr/borderlessButtonStyle"/>

        <Button
                android:id="@+id/btn_log"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_log"
                android:textAllCaps="false"
                style="?android:attr/borderlessButtonStyle"/>

        <Button
                android:id="@+id/btn_sin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_sin"
                android:textAllCaps="false"
                style="?android:attr/borderlessButtonStyle"/>

        <Button
                android:id="@+id/btn_cos"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_cos"
                android:textAllCaps="false"
                style="?android:attr/borderlessButtonStyle"/>

        <Button
                android:id="@+id/btn_tan"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_tan"
                android:textAllCaps="false"
                style="?android:attr/borderlessButtonStyle"/>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/linLayout_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="horizontal">

        <Button
                android:id="@+id/btn_integral"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_integral"
                android:textAllCaps="false"
                style="?android:attr/borderlessButtonStyle"/>

        <Button
                android:id="@+id/btn_diff"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_diff"
                android:textAllCaps="false"
                style="?android:attr/borderlessButtonStyle"/>

        <Button
                android:id="@+id/btn_limit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_limit"
                android:textAllCaps="false"
                style="?android:attr/borderlessButtonStyle"/>

        <Button
                android:id="@+id/btn_towards"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_towards"
                style="?android:attr/borderlessButtonStyle"/>

        <Button
                android:id="@+id/btn_exponent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_exponent"
                android:textStyle="italic"
                android:textAllCaps="false"
                style="?android:attr/borderlessButtonStyle"/>

    </LinearLayout>

    <LinearLayout
            android:id="@+id/linLayout_3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="horizontal">

        <Button
                android:id="@+id/btn_pi"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_pi"
                android:textAllCaps="false"
                style="?android:attr/borderlessButtonStyle"/>

        <Button
                android:id="@+id/btn_f"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_f"
                android:textStyle="italic"
                android:textAllCaps="false"
                style="?android:attr/borderlessButtonStyle"/>

        <Button
                android:id="@+id/btn_g"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_g"
                android:textStyle="italic"
                android:textAllCaps="false"
                style="?android:attr/borderlessButtonStyle"/>

        <Button
                android:id="@+id/btn_x"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_x"
                android:textStyle="italic"
                android:textAllCaps="false"
                style="?android:attr/borderlessButtonStyle"/>

        <Button
                android:id="@+id/btn_y"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_y"
                android:textStyle="italic"
                android:textAllCaps="false"
                style="?android:attr/borderlessButtonStyle"/>

    </LinearLayout>

    <LinearLayout
            android:id="@+id/linLayout_4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="horizontal">

        <Button
                android:id="@+id/btn_fractions"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_fractions"
                android:textAllCaps="false"
                android:visibility="invisible"
                style="?android:attr/borderlessButtonStyle"/>

        <Button
                android:id="@+id/btn_leftBracket"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_leftBracket"
                style="?android:attr/borderlessButtonStyle"/>

        <Button
                android:id="@+id/btn_rightBracket"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_rightBracket"
                style="?android:attr/borderlessButtonStyle"/>

        <Button
                android:id="@+id/btn_power"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_power"
                style="?android:attr/borderlessButtonStyle"/>

        <Button
                android:id="@+id/btn_root"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_root"
                style="?android:attr/borderlessButtonStyle"/>

    </LinearLayout>

    <LinearLayout
            android:id="@+id/linLayout_5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="horizontal">

        <Button
                android:id="@+id/btn_7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_7"
                style="?android:attr/borderlessButtonStyle"/>

        <Button
                android:id="@+id/btn_8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_8"
                style="?android:attr/borderlessButtonStyle"/>

        <Button
                android:id="@+id/btn_9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_9"
                style="?android:attr/borderlessButtonStyle"/>

        <Button
                android:id="@+id/btn_space"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_space"
                android:textAllCaps="false"
                android:textStyle="bold|italic"
                style="?android:attr/borderlessButtonStyle"/>

        <Button
                android:id="@+id/btn_clear"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_clear"
                android:textStyle="bold"
                style="?android:attr/borderlessButtonStyle"/>

        <Button
                android:id="@+id/btn_reset"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_reset"
                android:textStyle="bold"
                android:visibility="gone"
                style="?android:attr/borderlessButtonStyle"/>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/linLayout_6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="horizontal">

        <Button
                android:id="@+id/btn_4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_4"
                style="?android:attr/borderlessButtonStyle"/>

        <Button
                android:id="@+id/btn_5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_5"
                style="?android:attr/borderlessButtonStyle"/>

        <Button
                android:id="@+id/btn_6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_6"
                style="?android:attr/borderlessButtonStyle"/>

        <Button
                android:id="@+id/btn_multiply"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_multiply"
                style="?android:attr/borderlessButtonStyle"/>

        <Button
                android:id="@+id/btn_divide"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_divide"
                style="?android:attr/borderlessButtonStyle"/>

    </LinearLayout>

    <LinearLayout
            android:id="@+id/linLayout_7"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="horizontal">

        <Button
                android:id="@+id/btn_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_1"
                style="?android:attr/borderlessButtonStyle"/>

        <Button
                android:id="@+id/btn_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_2"
                style="?android:attr/borderlessButtonStyle"/>

        <Button
                android:id="@+id/btn_3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_3"
                style="?android:attr/borderlessButtonStyle"/>
        <Button
                android:id="@+id/btn_plus"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_plus"
                style="?android:attr/borderlessButtonStyle"/>

        <Button
                android:id="@+id/btn_minus"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_minus"
                style="?android:attr/borderlessButtonStyle"/>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/linLayout_8"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="horizontal">

        <Button
                android:id="@+id/btn_infinity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_infinity"
                android:textAllCaps="false"
                style="?android:attr/borderlessButtonStyle"/>

        <Button
                android:id="@+id/btn_0"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_0"
                style="?android:attr/borderlessButtonStyle"/>

        <Button
                android:id="@+id/btn_decimal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_decimal"
                style="?android:attr/borderlessButtonStyle"/>

        <Button
                android:id="@+id/btn_plusmn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_plusmn"
                android:visibility="gone"
                style="?android:attr/borderlessButtonStyle"/>

        <Button
                android:id="@+id/btn_equals"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_equals"
                style="?android:attr/borderlessButtonStyle"/>

        <Button
                android:id="@+id/btn_evalute"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_evalute"
                android:textAllCaps="false"
                android:textStyle="italic"
                android:textSize="20dp"
                style="?android:attr/borderlessButtonStyle"/>

    </LinearLayout>
</LinearLayout>
